force-app/main/default/objects/Estimate__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Sent to QA Assist Date</label>
    <type>DateTime</type>
</CustomField>