force-app/main/default/objects/Estimate__c/fields/Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Amount__c</fullName>
    <label>Dollar Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>