force-app/main/default/objects/Estimate__c/fields/Estimate_Link__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Link__c</fullName>
    <label>Estimate Link</label>
    <type>Url</type>
</CustomField>