force-app/main/default/objects/Estimate__c/fields/Estimate_Type__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Type__c</fullName>
    <label>Estimate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Supplement</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>