force-app/main/default/objects/Estimate__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>Estimate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>