force-app/main/default/objects/Estimate__c/fields/Related_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Related_Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Estimate</relationshipLabel>
    <relationshipName>Estimate</relationshipName>
    <type>Lookup</type>
</CustomField>