force-app/main/default/objects/Estimate__c/fields/ReviewID__c.field-meta.xml
<CustomField>
    <fullName>ReviewID__c</fullName>
    <externalId>true</externalId>
    <label>ReviewID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>